--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -73,7 +73,7 @@ $graph_height = 100;
         if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
     endforeach; 
     e(($relativeday*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height));
-    $totalpaid = $invoiced;
+    $totalworked = $invoiced;
     ?>
        "/>
 </svg>
