--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -53,6 +53,7 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalpaid_graph as $datapoint):
+        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
         $invoiced = $invoiced + $datapoint['']['invoiced'];
         if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
     endforeach; 
@@ -69,6 +70,7 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalwork_graph as $datapoint):
+        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
         $invoiced = $invoiced + $datapoint['']['worked'];
         if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
     endforeach; 
