--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -19,8 +19,11 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalincome_graph as $datapoint):
-        $invoiced = $invoiced + $datapoint['']['invoiced'];
-        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        if($datapoint['']['day_number'] < $relativeday) {
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+            $invoiced = $invoiced + $datapoint['']['invoiced'];
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        }
     endforeach; 
     e(($relativeday*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
     e(($relativeday*$graph_width).",".$graph_height);
@@ -36,8 +39,11 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($subscriptionincome_graph as $datapoint):
-        $invoiced = $invoiced + $datapoint['']['invoiced'];
-        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        if($datapoint['']['day_number'] < $relativeday) {
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+            $invoiced = $invoiced + $datapoint['']['invoiced'];
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        }
     endforeach; 
     e(($relativeday*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
     e(($relativeday*$graph_width).",".$graph_height);
@@ -53,9 +59,11 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalpaid_graph as $datapoint):
-        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
-        $invoiced = $invoiced + $datapoint['']['invoiced'];
-        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        if($datapoint['']['day_number'] < $relativeday) {
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+            $invoiced = $invoiced + $datapoint['']['invoiced'];
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        }
     endforeach; 
     e(($relativeday*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height));
     $totalpaid = $invoiced;
@@ -70,9 +78,11 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalwork_graph as $datapoint):
-        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
-        $invoiced = $invoiced + $datapoint['']['worked'];
-        if($datapoint['']['day_number'] < $relativeday) e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        if($datapoint['']['day_number'] < $relativeday) {
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+            $invoiced = $invoiced + $datapoint['']['worked'];
+            e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
+        }
     endforeach; 
     e(($relativeday*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height));
     $totalworked = $invoiced;
