--- a/pages/hours/view(admin).phtml
+++ b/pages/hours/view(admin).phtml
@@ -45,7 +45,7 @@
   </dl>
 	
 	<dl>
-		<dt>Subtotal (euro)</dt>
+		<dt>Subtotal (<?php e($currency['currencies']['name']); ?>)</dt>
   	<dd><?php $data['hours']['subtotal'] ? e($data['hours']['subtotal']) : e('-'); ?></dd>
   </dl>
 
