--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -10,6 +10,10 @@
     <link rel="apple-touch-icon" href="img/icon-196x196.png">
 
     <link href="css/default.css" rel="stylesheet" type="text/css">
+
+    <style>
+    .money span::before {content: '<?php e($currency['currencies']['character']); ?> '}
+    </style>
   </head>
   <body class="showmenu">
     <div class="main">
