--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1>Dashboard</h1>
 
-<p>Your <?php e(date('Y')); ?> invoice total is <?php e(round($incomeThisYear/1000,1)); ?>k <?php e($currency['currencies']['abbrevation']); ?>. For more information you can look at your <a href="/statistics">statistics</a>. Happy invoicing!</p>
+<p>Your <?php e(date('Y')); ?> invoice total is <?php e(round($incomeThisYear/1000,1)); ?>k <?php e($currency['currencies']['abbreviation']); ?>. For more information you can look at your <a href="/statistics">statistics</a>. Happy invoicing!</p>
 
 <br />
 <div class="row">
