--- a/pages/settings/general/edit(admin).phtml
+++ b/pages/settings/general/edit(admin).phtml
@@ -5,6 +5,16 @@
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
 
+		<div class="form-group <?php e(isset($errors['tenants[currency_id]'])?'has-error':''); ?>">
+		<label class="control-label" for="tenants[currency_id]">Currency</label>
+		<select class="form-control" name="tenants[currency_id]" id="tenants[currency_id]">
+			<?php foreach ($currencies as $currencyId=>$currencyName): ?>
+			<option value="<?php e($currencyId); ?>"<?php if($currency['currencies']['id']==$currencyId)e(' selected');?>><?php e($currencyName); ?></option>
+			<?php endforeach; ?>
+		</select>
+		<span class="help-block"><?php if (isset($errors['tenants[currency_id]'])) e($errors['tenants[currency_id]']); ?></span>
+		</div>
+
 		<div class="form-group <?php e(isset($errors['tenants[hours_active]'])?'has-error':''); ?>">
 		<label class="control-label" for="tenants[hours_active]">Time tracking</label>
 		<input class="form-control" name="tenants[hours_active]" type="checkbox" value="1" id="tenants[hours_active]" <?php if($data['tenants']['hours_active']) e('checked'); ?> />
