--- a/web/css/default.css
+++ b/web/css/default.css
@@ -395,7 +395,7 @@ ul.legend li .square.red {background: #F82C60;}
 ul.legend li .square.green {background: #26cab7;}
 ul.legend li .square.purple {background: #5b4f96;}
 ul.legend li .square.lightpurple {background: #928AB9;}
-ul.legend li .square.lightgray {background: #cccs;}
+ul.legend li .square.lightgray {background: #ccc;}
 
 
 /* set colors */
