--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1 style="padding-right: 20px;">Statistics of <?php e($year); ?> <a href="statistics/<?php e($year-1); ?>" class="down"></a><a href="statistics/<?php if($year < date('Y')) e($year+1); else e($year); ?>" class="up <?php if(($year+1) > date('Y')) e('inactive'); ?>"></a></h1>
 
-<p class="lead">You receive(d) <?php e($currency['currencies']['character']); ?> <?php e(round($subscriptionIncome)); ?> per month from <a href="/subscriptions">subscriptions</a>. The <?php e($year); ?> total of <a href="/invoices">invoices</a> is <?php e(round($incomeThisYear/1000,1)); ?>k <?php e($currency['currencies']['abbreviation']); ?><?php if(isset($incomeThisYearAddon) && $incomeThisYearAddon)  {?> and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k <?php e($currency['currencies']['abbreviation']); ?> of uninvoiced work.<?php } ?></p>
+<p class="lead">You receive(d) <?php e($currency['currencies']['character']); ?> <?php e(round($subscriptionIncome)); ?> per month from <a href="/subscriptions">subscriptions</a>. The <?php e($year); ?> total of <a href="/invoices">invoices</a> is <?php e(round($incomeThisYear/1000,1)); ?>k&nbsp;<?php e($currency['currencies']['abbreviation']); ?><?php if(isset($incomeThisYearAddon) && $incomeThisYearAddon)  {?> and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k&nbsp;<?php e($currency['currencies']['abbreviation']); ?> of uninvoiced work.<?php } ?></p>
 
 <div><?php e($maxyearincome/1000); ?>k</div>
 <?php 
