--- a/templates/default.phtml
+++ b/templates/default.phtml
@@ -5,6 +5,7 @@
     <title><?php Buffer::get('title');?> | InvoiceLion</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" type="image/png" href="img/icon-196x196.png">
     <link rel="shortcut icon" sizes="196x196" href="img/icon-196x196.png">
     <link rel="apple-touch-icon" href="img/homescreenicon.png">
