--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -39,7 +39,7 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($subscriptionincome_graph as $datapoint):
-        if($datapoint['']['day_number'] < $relativeday) {
+        if($datapoint['']['day_number'] <= $relativeday) {
             e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
             $invoiced = $invoiced + $datapoint['']['invoiced'];
             e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
@@ -59,7 +59,7 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalpaid_graph as $datapoint):
-        if($datapoint['']['day_number'] < $relativeday) {
+        if($datapoint['']['day_number'] <= $relativeday) {
             e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
             $invoiced = $invoiced + $datapoint['']['invoiced'];
             e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
@@ -78,7 +78,7 @@ $graph_height = 100;
     <?php 
     $invoiced = 0;
     foreach ($totalwork_graph as $datapoint):
-        if($datapoint['']['day_number'] < $relativeday) {
+        if($datapoint['']['day_number'] <= $relativeday) {
             e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
             $invoiced = $invoiced + $datapoint['']['worked'];
             e(($datapoint['']['day_number']*$graph_width).",".($graph_height-($invoiced/$maxyearincome)*$graph_height)." ");
